--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ a {
 }
 
 .footer img {
-  height: 50%; /* Adjust the percentage as needed */
+  height: 50%;
 }
 
 @media screen and (max-width: 1024px) {
