--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,8 @@ a {
 .footer img {
   height: 50%;
 }
+
+/*
 @media screen and (min-width: 2560px) {
   .header {
     padding: 1.5vw 2.5vw 0 2.5vw;
@@ -235,7 +237,7 @@ a {
   .footer img {
     height: 100%;
   }
-}
+}*/
 @media screen and (max-width: 1000px) {
   .header {
     padding: 30px 20px 0 20px;
