--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body {
   background-color: var(--background);
   margin: 0;
   padding: 0;
-  max-width:1440px;
-  margin: auto;
+ /* max-width:1440px;
+  margin: auto;*/
   
 }
 p,
@@ -165,7 +165,7 @@ a {
   height: 50%;
 }
 
-/*
+
 @media screen and (min-width: 2560px) {
   .header {
     padding: 1.5vw 2.5vw 0 2.5vw;
@@ -237,7 +237,7 @@ a {
   .footer img {
     height: 100%;
   }
-}*/
+}
 @media screen and (max-width: 1000px) {
   .header {
     padding: 30px 20px 0 20px;
